--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,17 @@
   text-align: center;
 }
 
+.body-container{
+  width: 100%;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
 .grid {
-  width:100%;
+  width:80%;
   display:flex;
   flex-direction: row;
   justify-content: space-evenly;
