--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,22 @@ body{
   padding: 70px;
 }
 
+.body-sort{
+  text-align:left;
+  display: flex;
+  width: 70%;
+  flex-wrap: wrap;
+  align-items: center;
+  vertical-align: center;
+}
+
+.button-filter{
+  margin-left: 10px;
+  background-color: white;
+  color:#153f65;
+  border: 1px solid #153f65;
+}
+
 .nav-bar{
   width: 100%;
   background-color: #153f65;
@@ -46,6 +62,24 @@ body{
   display: flex;
   flex-direction: column;
   color:#153f65;
+}
+
+.selector{
+  font-size:15px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.filter-word{
+  font-size:20px;
+  border: 1px solid black;
+  padding: 0px 20px 0px 20px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.row{
+  padding:10px;
 }
 
 .grid {
@@ -108,6 +142,10 @@ body{
   .grid-card{
     width:90%;
   }
+
+  .body-sort{
+    width: 80%;
+  }
 }
 
 @media (min-width: 600px) and (max-width: 1024px) {
@@ -116,5 +154,8 @@ body{
   }
   .grid-card{
     width:45%;
+  }
+  .body-sort{
+    width: 95%;
   }
 }
