--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@ body{
   font-family: Poppins;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .body-header{
   padding: 70px;
 }
@@ -19,15 +23,42 @@ body{
   vertical-align: center;
 }
 
+.special-tag{
+  top:2%;
+  left: 0%;
+  position: absolute;
+}
+
+.special-text{
+  font-size:20px;
+  margin-right:5px;
+}
+
+.error-container{
+  height: 80vh;
+  width: 100%;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.head-image{
+  width:100%;
+  height:100vh;
+  object-fit:cover;
+}
+
 .nav-bar{
   width: 100%;
-  background-color: #153f65;
+  background-color: #222222;
   color:white;
   position: sticky;
   top:0px;
   z-index: 1;
   display: flex;
   justify-content: center;
+  align-items: center;
+  height: 70px;
 }
 
 .nav-container{
@@ -47,6 +78,41 @@ body{
   padding: 5px 17px 0px 17px;
 }
 
+.text-container{
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.header-text-box{
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  width: 30%;
+  text-align: left;
+  color:white;
+  font-weight: bold;
+}
+
+.header-text-title{
+  font-size:100px;
+}
+
+.header-text{
+  font-size: 40px;
+  font-style: italic;
+}
+
+.header-button{
+  color:white;
+  background-color: black;
+}
+
+.header-button:hover{
+  color:black;
+  background-color: white;
+}
+
 .body-container{
   width: 100%;
   margin: auto;
@@ -55,6 +121,7 @@ body{
   display: flex;
   flex-direction: column;
   color:#153f65;
+  padding:30px;
 }
 
 .selector{
@@ -90,6 +157,7 @@ body{
   flex-direction: column;
   padding:5px;
   margin-top:10px;
+  position:relative;
 }
 
 .grid-card-body{
@@ -140,6 +208,13 @@ body{
   .body-sort{
     width: 80%;
   }
+
+  .nav-text{
+    font-size:13px;
+  }
+  .header-text-title{
+    font-size:70px;
+  }
 }
 
 @media (min-width: 600px) and (max-width: 1024px) {
@@ -151,5 +226,11 @@ body{
   }
   .body-sort{
     width: 95%;
+  }
+  .nav-text{
+    font-size:16px;
+  }
+  .header-text-title{
+    font-size:85px;
   }
 }
